// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-order-tax-id-input Renders CA Tax Type 1`] = `
<sc-order-tax-id-input>
  <mock:shadow-root>
    <sc-tax-id-input country="CA" status="unknown" type="eu_vat"></sc-tax-id-input>
  </mock:shadow-root>
</sc-order-tax-id-input>
`;

exports[`sc-order-tax-id-input Renders EU VAT Tax Type 1`] = `
<sc-order-tax-id-input>
  <mock:shadow-root>
    <sc-tax-id-input country="DE" status="unknown" type="eu_vat"></sc-tax-id-input>
  </mock:shadow-root>
</sc-order-tax-id-input>
`;

exports[`sc-order-tax-id-input Renders UK VAT Tax Type 1`] = `
<sc-order-tax-id-input>
  <mock:shadow-root>
    <sc-tax-id-input country="GB" status="unknown" type="eu_vat"></sc-tax-id-input>
  </mock:shadow-root>
</sc-order-tax-id-input>
`;

exports[`sc-order-tax-id-input Renders with Help Text 1`] = `
<sc-order-tax-id-input>
  <mock:shadow-root>
    <sc-tax-id-input help="Enter your tax identifier" status="unknown" type="eu_vat"></sc-tax-id-input>
  </mock:shadow-root>
</sc-order-tax-id-input>
`;

exports[`sc-order-tax-id-input renders 1`] = `
<sc-order-tax-id-input>
  <mock:shadow-root>
    <sc-tax-id-input status="unknown" type="eu_vat"></sc-tax-id-input>
  </mock:shadow-root>
</sc-order-tax-id-input>
`;
